@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.672 2005-05-31 23:40:21 castaglia Exp $
+$Id: NEWS,v 1.673 2005-06-01 17:21:19 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -28,6 +28,7 @@ CVS
 - Bug 2585 - Proftpd does not write RFC 3164 compliant messages into /dev/log.
 - Bug 2601 - mod_delay sometimes delays for a long time.
 - Bug 2622 - Segfault seen randomly in mod_delay.
+- Bug 2578 - ProFTPD does not listen on IPv6 addresses on FreeBSD.
 
 1.3.0rc1 - Released 10-Apr-2005
 --------------------------------
